<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sudowear.android.SetAddress">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Create a Command"
        android:id="@+id/pageTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Where would you like to deliver this?"
        android:id="@+id/typeDescription"
        android:layout_below="@+id/pageTitle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:layout_alignEnd="@+id/radioGroup" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/typeDescription"
        android:layout_alignParentEnd="true">

        <RadioButton android:id="@+id/radio_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:onClick="goToNext"/>
        <RadioButton android:id="@+id/radio_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work"
            android:onClick="goToNext"/>
        <RadioButton android:id="@+id/radio_google_chelsea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/google_chelsea"
            android:onClick="goToNext"/>
    </RadioGroup>
</RelativeLayout>
