<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sudowear.android.SelectCommandType">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Create a Command"
        android:id="@+id/pageTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="What Kind of Command is This?"
        android:id="@+id/typeDescription"
        android:layout_below="@+id/pageTitle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:layout_alignEnd="@+id/radioGroup" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/typeDescription"
        android:layout_alignParentEnd="true">

        <RadioButton android:id="@+id/radio_delivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery"
            android:onClick="goToNext"/>
        <RadioButton android:id="@+id/radio_pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pickup"
            android:onClick="goToNext"/>
        <RadioButton android:id="@+id/radio_appointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appointment"
            android:onClick="goToNext"/>
    </RadioGroup>

</RelativeLayout>
